# playground

./: .gitignore  8004.html  DESIGN.md  LICENSE  README.md  index.js  package.json  payment.html  wallet-connector.js  wrangler.toml  x402.html
server/: .env-template  .gitignore  Cargo.toml
server/src/: main.rs
ui/: 8004.html  faucet.md  index.html  payment.html  x402.html  x402.md  zpaynow.json
