[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
#x402 = { git = "https://github.com/zpaynow/ZeroPay" }
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }